src/assets/scss/blocks/_list-blocks.scss
/*------------------------------------*\
  > List Blocks & Block
  A list of "blocks" used for various purpose
  e.g. Planing Period
\*------------------------------------*/

.list-blocks {
    list-style-type: none;
    padding: 0;
    display: flex;
    flex-wrap: wrap;
    justify-content: flex-start;
    margin-right: -$size-20;
}

.list-blocks__item {
    display: flex;
    margin-bottom: $size-30;
    margin-right: $size-28;
    justify-content: center;
    align-items: center;
    width: $size-90;

    @include media-query("medium") {
        margin-right: $size-20;
    }
}

// Block
// ---------------------
.block {
    align-items: flex-end;
    flex-wrap: wrap;
    border: 1px solid $grey-90;
    border-radius: $size-10;
    background: #fff;

    // For better performance use a pseudo element with box shadow and set transition on opacity (instead of box-shadow directly)
    // Pseudo element use for shadow
    &::after {
        content: "";
        position: absolute;
        top: 0;
        right: 0;
        bottom: 0;
        left: 0;
        box-shadow: 0px 0px $size-10 rgba(0, 0, 0, 0.25);
        opacity: 0;
        transition: opacity .2s $ease-in-out;
        border-radius: $size-10;
        z-index: -1;
    }
}

.block,
.block--transparent {
    position: relative;
    display: flex;
    min-width: $size-90;
    min-height: $size-90;
}

.block--transparent {
    align-items: center;
    justify-content: center;
}

.block--selected::after {
    opacity: 1;
}

.block__header,
.block__content {
    width: 100%;
}

.block__header {
    position: absolute;
    top: 0;
    display: flex;
    padding: $size-5 $size-5 0;
    justify-content: space-between;
    align-items: center;
}

.block__content {
    text-align: center;
    padding-bottom: $size-5;
}

.block__title {
    margin: 0;
    font-weight: $font-weight-regular;
    font-size: $size-16;
    line-height: 1;
}

.block__title-value {
    position: absolute;
    display: block;
    width: 100%;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    font-weight: $font-weight-bold;
    font-size: $size-30;
    overflow: auto;
}

.block__button {
    opacity: 1;
    visibility: visible;
    transition: opacity .2s $ease-in-out, visibility .2s;
}

.block__button.hidden {
    opacity: 0;
    visibility: hidden;
}

// Block Input
// "Unstyled" input inside of a bloc
// e.g. When adding a new period in planning-period
.block__input {
    width: calc(100% - #{$size-20});
    text-align: center;
    color: $color-body;
}

.list-blocks__item--new {
  animation: fadeIn 0.4s forwards;
}

